--- a/css/styles.css
+++ b/css/styles.css
@@ -34,24 +34,8 @@ ul {
 img {
   display: block;
 }
-/* main */
-.container {
-  width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
-  cursor: default;
-  /* outline: 1px solid red; */
-}
 body {
-  font-family: var(--font-family);
-  font-size: 16px;
-  color: var(--text);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-.section {
-  margin-bottom: 120px;
+  font-family: Roboto, sans-serif;
 }
 .list {
   list-style: none;
@@ -59,54 +43,11 @@ body {
 .link {
   text-decoration: none;
 }
-.visualli-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-/* buttons */
-.button {
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-}
-.button.primary {
-  padding: 16px 32px;
-  background-color: var(--primary-brand);
-  color: var(--primary-white);
-}
-
-.button.primary:hover,
-.button.primary:focus {
-  background-color: var(--pressed-state);
-  transition: background-color var(--cubic);
-}
-.button.secondary {
-  border-color: var(--accent);
-  padding: 12px 24px;
-  background-color: var(--light);
-  color: var(--primary-brand);
-}
-.button.secondary:hover,
-.button.secondary:focus {
-  background-color: var(--pressed-state);
-  color: var(--primary-white);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.08),
-    0 3px 1px 0 rgba(0, 0, 0, 0.1);
-  transition: background-color var(--cubic), color var(--cubic),
-    box-shadow var(--cubic);
+.container {
+  width: 396px;
+  outline: 1px solid red;
+  margin: auto;
+  margin-top: 24px;
 }
 /* logo */
 .logo {
@@ -125,513 +66,61 @@ body {
 .footer-span {
   color: var(--primary-white);
 }
-/* header */
-header {
-  border-bottom: 1px solid var(--accent);
+.burger-menu {
+  border: none;
+  padding: 0;
+  background-color: transparent;
 }
-.header-container {
+.burger {
+  stroke: var(--dark);
+}
+.mob-header {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
 }
-.address-nav {
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+.menu {
   display: flex;
-  gap: 40px;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 24px 24px 24px 40px;
+  justify-content: space-between;
+  max-height: 796px;
+  overflow: auto;
 }
-.address-nav .link {
-  color: var(--text);
-  font-style: normal;
-}
-.address-nav .link:hover,
-.address-nav .link:focus {
-  color: var(--pressed-state);
-  transition: color var(--cubic);
-}
-address {
+.modal-close {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border-color: transparent;
   margin-left: auto;
+}
+.close-ico {
+  fill: var(--dark);
+  width: 100%;
+  height: 100%;
 }
 .site-nav {
   display: flex;
+  flex-direction: column;
+  margin-top: 32px;
+  font-size: 36px;
   gap: 40px;
-  margin-left: 76px;
 }
-.site-nav .link {
-  display: block;
-  color: var(--dark);
-  font-weight: 500;
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--pressed-state);
-  transition: color var(--cubic);
-}
-.link.current {
-  position: relative;
-  color: var(--pressed-state);
-}
-.link.current::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
-  background-color: var(--pressed-state);
-  border-radius: 2px;
-}
-/* title */
-.section-title {
-  margin-bottom: 72px;
-  color: var(--dark);
+.address-nav .link {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.1;
-  text-align: center;
-}
-
-.section-subtitle {
-  color: var(--dark);
-  margin-bottom: 8px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-}
-/* hero */
-.hero-section {
-  max-width: 1440px;
-  padding: 188px 0px;
-
-  text-align: center;
-  background-image: var(--bg-gradient), url(../images/hero-bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-.hero-title {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 48px;
-  width: 496px;
-  font-size: 56px;
-  line-height: 1.1;
-  color: var(--primary-white);
-  text-align: center;
-}
-/* features */
-.features-list {
-  gap: 24px;
-  display: flex;
-}
-.features-item {
-  min-width: 264px;
-}
-.features-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 264px;
-  height: 112px;
-  background-color: var(--light);
-  border-radius: 4px;
-  margin-bottom: 8px;
-}
-.features-icon {
-  width: 64px;
-  height: 64px;
-  background-position: center;
-}
-
-/* work */
-.work-list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-}
-/* team */
-.team-section {
-  margin-bottom: 0px;
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-color: var(--light);
-}
-.team-card {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-}
-.team-descr {
-  padding: 32px 16px;
-  background-color: var(--primary-white);
-  text-align: center;
-  border-radius: 0 0 4px 4px;
-}
-.team-list {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-}
-.social-list {
-  margin-top: 8px;
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-.social-item {
-  display: flex;
-  background-color: var(--primary-brand);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-}
-.social-item:hover,
-.social-item:focus {
-  background-color: var(--pressed-state);
-  transition: background-color var(--cubic);
-}
-.social-link {
-  display: flex;
-  height: 16px;
-}
-.social-icon {
-  width: 16px;
-  height: 16px;
-}
-/* customers */
-.section-customers {
-  margin-top: 120px;
-}
-.customers-list {
-  display: flex;
-  gap: 24px;
-}
-
-.customers-link:is(:hover, :focus) .customers-ico {
-  fill: var(--pressed-state);
-  transition: fill var(--cubic);
-}
-
-.customers-link {
-  width: 168px;
-  height: 88px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid var(--light-slate);
-  border-radius: 4px;
-}
-
-.customers-link:is(:hover, :focus) {
-  border-color: var(--pressed-state);
-  transition: border-color var(--cubic);
-}
-
-.customers-ico {
-  width: 104px;
-  height: 56px;
-  fill: var(--light-slate);
-}
-
-/* footer */
-footer {
-  padding: 100px 0;
-  background-color: var(--dark);
-}
-.footer-text {
-  margin-top: 16px;
-  color: var(--light);
-  width: 264px;
-}
-.footer-container {
-  display: flex;
-}
-.social-footer {
-  margin-left: 120px;
-}
-.footer-subtitle {
-  margin-top: 0;
-  margin-bottom: 16px;
-  color: var(--primary-white);
-  font-size: 16px;
-}
-.social-list-footer {
-  margin-top: 8px;
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-}
-.social-item-footer {
-  display: flex;
-  background-color: var(--primary-brand);
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-}
-.social-item-footer:hover,
-.social-item-footer:focus {
-  background-color: var(--green);
-  transition: background-color var(--cubic);
-}
-.social-link-footer {
-  display: flex;
-  height: 24px;
-}
-.social-icon-footer {
-  width: 24px;
-  height: 24px;
-}
-.subscribe {
-  margin-left: 80px;
-}
-.subscribe-form {
-  display: flex;
-  gap: 24px;
-}
-.subscribe-form > input {
-  border: 1px solid var(--primary-white);
-  border-radius: 4px;
-  width: 264px;
-  height: 40px;
-  background-color: transparent;
-  color: var(--primary-white);
-  padding: 8px 16px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-}
-.subscribe-form > input::placeholder {
-  color: var(--primary-white);
-}
-.subscribe-form > input:hover,
-.subscribe-form > input:focus {
-  outline: none;
-}
-.button.primary.subs-btn {
-  display: flex;
-  padding: 8px 24px;
-
-  align-items: center;
-}
-.subs-ico {
-  fill: var(--primary-white);
-  width: 24px;
-  height: 24px;
-  margin-left: 16px;
-}
-
-/* portfolio */
-
-.portfolio-item:is(:hover, :focus) {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  transition: box-shadow var(--cubic);
-}
-.portfolio-item:hover .portfolio-text {
-  transform: translateY(0);
-  transition: transform var(--cubic);
-}
-.filter-list {
-  margin-top: 96px;
-  margin-bottom: 72px;
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-}
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-.portfolio-wrap {
-  position: relative;
-  overflow: hidden;
-}
-.portfolio-text {
-  position: absolute;
-  top: 0;
-  font-weight: 400;
-  font-size: 16px;
-  padding-left: 32px;
-  padding-top: 40px;
-  color: var(--light);
-  background-color: var(--primary-brand);
-  transform: translateY(100%);
-  transition: transform var(--cubic);
-  height: 100%;
-}
-.portfolio-descr {
-  padding: 32px 16px;
-  border: 1px solid var(--accent);
-}
-
-/* modal */
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(46, 47, 66, 0.4);
-  opacity: 1;
-  transition: opacity var(--cubic), visibility var(--cubic);
-}
-
-.backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
-  transition: transform var(--cubic);
-}
-
-.modal {
-  padding: 24px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  width: 408px;
-  height: 584px;
-  background-color: var(--primary-white);
-  border-radius: 4px;
-  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-    0 1px 1px 0 rgba(0, 0, 0, 0.14);
-  transition: transform var(--cubic);
-}
-
-.modal-close {
-  display: flex;
-  width: 24px;
-  height: 24px;
-  background-color: var(--accent);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-
-  margin-left: auto;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-close:hover,
-.modal-close:focus {
-  background-color: var(--pressed-state);
-  fill: var(--primary-white);
-  transition: background-color var(--cubic), fill var(--cubic);
-}
-
-.close-ico {
-  width: 8px;
-  height: 8px;
-}
-.modal-title {
-  margin-top: 24px;
-  margin-bottom: 16px;
-  font-size: 16px;
-  line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
-}
-.input-label {
-  display: flex;
-  flex-direction: column;
-  font-size: 12px;
-  line-height: 1.2;
-  letter-spacing: 0.04em;
-  color: var(--light-slate);
-  gap: 4px;
-}
-.input-wrap {
-  position: relative;
-}
-.form-field {
-  margin-bottom: 8px;
-  display: block;
-}
-.modal-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid var(--navy-blue-modal);
-  border-radius: 4px;
-  padding-left: 38px;
-}
-.modal-input:is(:hover, :focus) {
-  outline: none;
-  border-color: var(--primary-brand);
-}
-.modal-input:is(:hover, :focus) + .modal-ico {
-  fill: var(--primary-brand);
-}
-.modal-input.area {
-  height: 120px;
-  resize: none;
-  padding: 8px 16px;
-}
-.modal-ico {
-  position: absolute;
-  width: 18px;
-  height: 24px;
-  top: 50%;
-  left: 16px;
-  transform: translateY(-50%);
-}
-.modal-ico > use {
-  width: 100%;
-  height: 100%;
-}
-
-.check-text span {
-  width: 16px;
-  height: 16px;
-  border: 1px solid var(--dark);
-  border-radius: 2px;
-  margin-right: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
-}
-.check-text {
-  display: flex;
-  margin-top: 16px;
-  align-items: center;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.1;
-  letter-spacing: 0.04em;
-  color: var(--light-slate-color);
-  margin-right: 2px;
-}
-.input-check:checked + .check-text > span {
-  background-color: var(--pressed-state);
-  border: none;
-  fill: var(--primary-white);
-}
-.input-check:checked + .check-text {
-  user-select: none;
-  background-color: transparent;
-}
-.input-check:focus + .check-text > span {
-  border-color: var(--dark);
-}
-.check-link {
   color: var(--primary-brand);
-  font-size: 12px;
-  margin-left: 4px;
-}
-.modal-button {
-  display: block;
-  margin-top: 24px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 169px;
-  height: 56px;
 }
